--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,26 @@ img{
 /*==============HEADER=============*/
 
 
+.header{
+    border-bottom: 1px solid #e7e9fc;
+
+}
+
+.header.container{
+    display: flex;
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px
+}
+
+.header_nav{
+    display: flex;
+    align-items: center;
+
+}
+
 .header-logo {
+    margin-right: 76px;
     color: #4D5AE5;
     font-size: 18px;
     font-family: "Raleway",sans-serif;
@@ -53,6 +72,8 @@ img{
 
 
 .header-menu-list {
+    gap: 40px;
+    display: flex;
     color:#2E2F42;
     font-size: 16px;
     font-family: "Roboto";
@@ -62,12 +83,18 @@ img{
     word-wrap: break-word
 }
 
-.header_menu_list_a{
+.header_menu_list_menu{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+
+
+}
+
+.header_menu_list_a{
+    padding: 24px 0;
 
 }
 
@@ -93,6 +120,7 @@ img{
 
 .header-menu-item-a{  
     color: #434455;
+    
 }
 
 .header-menu-item-a:hover {  
@@ -104,7 +132,10 @@ img{
 }
 
 .address {
-    font-style: normal
+    display: flex;
+    font-style: normal;
+    gap: 40px;
+
 }
 /*================HERO===========*/
 
