--- a/css/styles.css
+++ b/css/styles.css
@@ -213,7 +213,7 @@ img{
 
 .strategy_li{
     width: calc((100% - 72px) / 4);
-    
+
 }
 
 .strategy-h{
@@ -274,15 +274,16 @@ img{
 }
 
 .team{
+    padding: 120px 0;
     line-height: 1.5;
     letter-spacing: 0.02em;
     background-color: #F4F4FD;
     color: #434455;
 
-
 }
 
 .logo_team{
+    margin-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
@@ -291,11 +292,26 @@ img{
     color: #2e2f42;
 }
 
+.team_div{
+    padding: 32px;
+
+}
+
+.team_ul{
+    display: flex;
+    gap: 24px;
+}
+
 .team_li{
+
+    border-radius: 0px 0px 4px 4px;
+    width: calc((100% - 72px) / 4);
     background-color: #FFFFFF;
 }
 
 .team_h{
+    margin-bottom: 8px;
+    text-align: center;
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -304,6 +320,7 @@ img{
 }
 
 .team_p {
+    text-align: center;
     font-size: 16px
 }
 
@@ -311,12 +328,37 @@ img{
 /*=== Our Portfolio ===*/
 
 .portfolio{
+    padding: 120px 0 120px 0;
+}
+
+.portfolio_logo{
+    margin-bottom: 72px;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42 ;
+}
+
+.portfolio_ul{
+    display: flex;
+    flex-wrap: wrap; 
+    column-gap: 24px;
+    row-gap: 48px;
+}
+
+.portfolio_div{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc; 
+    border-top: none;
+    margin-bottom: 8px;
+    
+}
+
+.portfolio_li{
+    width: calc((100% - 48px) / 3);
+
 }
 
 .portfolio_h{
