--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,11 @@ img{
     display: block;
 }
 
-
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px
+}
 
 
 /*==============HEADER=============*/
@@ -29,11 +33,9 @@ img{
 
 }
 
-.header.container{
+.header .container{
     display: flex;
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px
+    align-items: center;
 }
 
 .header_nav{
@@ -84,13 +86,8 @@ img{
 }
 
 .header_menu_list_menu{
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
-
-
+    display: flex;
+    gap: 40px;
 }
 
 .header_menu_list_a{
