--- a/css/styles.css
+++ b/css/styles.css
@@ -186,21 +186,32 @@ img{
 /*==============strategy=============*/
 
 
-.strategy {
-
-    padding: 120px 0;
-    line-height: 1.07;
-}
-
-.Logo_strategy{
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
     font-size: 36px;
     line-height: 1.11;
     text-align: center;
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
-    visibility: hidden;
+  }
+
+
+.strategy {
+
+    padding: 120px 0;
+    line-height: 1.07;
 }
+
 
 .strategy_ul{
     display: flex;
