--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,9 @@ img{
 }
 
 .container {
+    margin-right: 120px;
+    align-items: baseline;
+    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px
@@ -295,6 +298,46 @@ img{
     letter-spacing: 0.54px;
     word-wrap: break-word
 }
+
+.footer_p_div{
+    margin-bottom: 16px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color:  #FFFFFF;
+}
+
+.footer_ul{
+    display: flex;
+    gap: 16px;
+}
+
+.footer_li{
+    width: 40px;
+    height: 40px;
+
+}
+
+.footer_a{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.footer_a:hover{
+    background-color: #31d0aa;
+}
+
+.footer_a:focus{
+    background-color: #31d0aa;
+}
+
 
 /*=====team=====*/
 
