--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,7 @@ img{
 .footer_li{
     width: 40px;
     height: 40px;
+    width: calc((100% - 48px) / 3);
 
 }
 
@@ -324,9 +325,10 @@ img{
     height: 100%;
     background-color: #4d5ae5;
     border-radius: 50%;
-    display: flex;
+    display: inline-block;;
     align-items: center;
     justify-content: center;
+    
 
 }
 
