--- a/css/styles.css
+++ b/css/styles.css
@@ -32,9 +32,6 @@ img{
 }
 
 .container {
-    margin-right: 120px;
-    align-items: baseline;
-    display: flex;
     width: 1158px;
     margin: 0 auto;
     padding: 0 15px
@@ -46,7 +43,7 @@ img{
 
 .header{
     border-bottom: 1px solid #e7e9fc;
-
+    box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header .container{
@@ -316,14 +313,18 @@ img{
 .footer_li{
     width: 40px;
     height: 40px;
-    width: calc((100% - 48px) / 3);
 
 }
 
 .footer_a{
-    display: inline-block;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: inline-block;;
+    align-items: center;
+    justify-content: center;
     margin-bottom: 16px;
-    
 }
 
 .footer_a:hover{
@@ -334,6 +335,14 @@ img{
     background-color: #31d0aa;
 }
 
+.container_footer{
+    margin-right: 120px;
+    align-items: baseline;
+    display: flex;
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px
+}
 
 /*=====team=====*/
 
