--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ img{
 .header_nav{
     display: flex;
     align-items: center;
-
+    margin-right: auto;
 }
 
 .header-logo {
@@ -89,7 +89,7 @@ img{
 .header-menu-list {
     gap: 40px;
     display: flex;
-    color:#2E2F42;
+    color:#434455;;
     font-size: 16px;
     font-family: "Roboto";
     font-weight: 500;
@@ -99,11 +99,14 @@ img{
 }
 
 .header_menu_list_menu{
+    color: #434455;
     display: flex;
     gap: 40px;
 }
 
 .header_menu_list_a{
+    color: #434455;
+    display: block;
     padding: 24px 0;
 
 }
@@ -155,6 +158,8 @@ img{
 }
 
 .hero-title {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 496px;
     text-align: center;
     color: white;
@@ -168,6 +173,8 @@ img{
 
 
 .hero-btm {
+    margin-left: auto;
+    margin-right: auto;
     cursor: pointer;
     border-radius: 4px;
     border: none;
@@ -427,7 +434,6 @@ img{
     padding: 32px 16px;
     border: 1px solid #e7e9fc; 
     border-top: none;
-    margin-bottom: 8px;
     
 }
 
